.metadata/.plugins/org.eclipse.cdt.ui/ADCDAInternalInterrupt.build.log
11:46:41 **** Incremental Build of configuration Debug for project ADCDAInternalInterrupt ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:128:33: warning: pointer targets in passing argument 1 of 'CDC_Transmit_FS' differ in signedness [-Wpointer-sign]
  128 |                 CDC_Transmit_FS(buffer, sizeof(buffer));
      |                                 ^~~~~~
      |                                 |
      |                                 char *
../Core/Src/main.c:65:41: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
   65 | extern uint8_t CDC_Transmit_FS(uint8_t *Buf, uint16_t Len);
      |                                ~~~~~~~~~^~~
../Core/Src/main.c:147:33: warning: pointer targets in passing argument 1 of 'CDC_Transmit_FS' differ in signedness [-Wpointer-sign]
  147 |                 CDC_Transmit_FS(buffer, sizeof(buffer));
      |                                 ^~~~~~
      |                                 |
      |                                 char *
../Core/Src/main.c:65:41: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
   65 | extern uint8_t CDC_Transmit_FS(uint8_t *Buf, uint16_t Len);
      |                                ~~~~~~~~~^~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:159:1: error: expected identifier or '(' before '}' token
  159 | }
      | ^
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:46:42 Build Failed. 2 errors, 2 warnings. (took 896ms)

